--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,8 +1,12 @@
 /*!
-  * =====================================================
-  * **************** STARTER KIT STYLES *****************
-  * =====================================================
+  * ===========================================================
+  * **************** REACT STARTER KIT STYLES *****************
+  * ===========================================================
   */
+
+//Bootstrap Reboot & Grid
+@import '/bootstrap/bootstrap-reboot.scss';
+@import '/bootstrap/bootstrap-grid.scss';
 
 @import '/shared/fonts.scss';
 @import '/shared/global.scss';
